SERVER-28819 fix typo in PlanExecutor invariant